--- a/CodeHives/index.html
+++ b/CodeHives/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeHives</title>
     <link rel="stylesheet" href="css/codehives.css">
+    <link rel="stylesheet" media="screen and (max-width:1550px)" href="css/bigscreen.css">
 </head>
 <body>
     <div class="container">
@@ -13,35 +14,37 @@
             <div class="ch-left">
                 <img src="img/CH left.png" alt="">
             </div>
-            <div class="ch-right">
-                <div class="welcome-text">
-                    <p class="big-text">
-                        Welcome to <br>CodeHives
-                    </p>
-                </div>
-                <form action="#">
-                    <div class="inputs">
-                        <div class="fields">
-                            <div class="fieldset">
-                                <input type="email" class="before-f1" required="" autocomplete="off" >
-                                <h1 class="F1"><span>Email or phone</span></h1>
-                                <label  class="placeholder">Email or phone</label><br>
+            <div class="right">            
+                <div class="ch-right">
+                    <div class="welcome-text">
+                        <p class="big-text">
+                            Welcome to <br>CodeHives
+                        </p>
+                    </div>
+                    <form action="#">
+                        <div class="inputs">
+                            <div class="fields">
+                                <div class="fieldset">
+                                    <input type="email" class="before-f1" required="" autocomplete="off" >
+                                    <h1 class="F1"><span>Email or phone</span></h1>
+                                    <label  class="placeholder">Email or phone</label><br>
+                                </div>
                             </div>
-                        </div>
-                        <div class="fields">
-                            <div class="fieldset">
-                                <input type="password" class="before-f1" name="pwd" required="" autocomplete="off">
-                                <h1 class="F1"><span>Password</span></h1>
-                                <label class="placeholder">Password</label><br>
+                            <div class="fields">
+                                <div class="fieldset">
+                                    <input type="password" class="before-f1" name="pwd" required="" autocomplete="off">
+                                    <h1 class="F1"><span>Password</span></h1>
+                                    <label class="placeholder">Password</label><br>
+                                </div>
                             </div>
-                        </div>
+                    </form>
                         <div class="forgot-content">
                             <div class="small-text">
                                 Forgot Password?
                             </div>
                         </div>
                         <div class="sign-in-btn">
-                            <div class="mid-text">
+                            <div class="mid-text">                                    
                                 <p>
                                     Sign In
                                 </p>
@@ -51,9 +54,9 @@
                             <hr class="left">
                             <p>OR</p>  
                             <hr class="right">                    
-                        </div>                      
+                        </div>                                                  
                         <div class="sign-ggl">
-                            <img src="img/ggl icon.png" alt="">&nbsp<span>Sign In with Google</span>                           
+                            <img src="img/ggl icon.png" alt="">&nbsp &nbsp<span>Sign In with Google</span>                           
                         </div>
                         <div class="sign-up1">
                             <p class="mid-text">
@@ -62,7 +65,7 @@
                             </p>
                         </div>
                     </div>                
-                </form>
+                </div>
             </div>
         </div>
 
@@ -70,63 +73,65 @@
 <!-------------------------------------------------------
 --------------------Page - 2 ----------------------------
 -------------------------------------------------------->
-        <div class="page-2">
+        <!-- <div class="page-2">
             <div class="ch2-left">
                 <img src="img/CH left.png" alt="">
             </div>
-            <div class="ch2-right">
-                <div class="welcome-text">
-                    <p class="big-text">
-                        Register With <br>CodeHives
-                    </p>
-                </div>
-                <form action="#">
-                    <div class="inputs">
-                        <div class="fields">
-                            <div class="fieldset">
-                                <input type="email" class="before-f1" required="" autocomplete="off" >
-                                <h1 class="F1"><span>User name</span></h1>
-                                <label  class="placeholder">Username</label><br>
+            <div class="right">          
+                <div class="ch2-right">
+                    <div class="welcome-text">
+                        <p class="big-text">
+                            Register With <br>CodeHives
+                        </p>
+                    </div>
+                    <form action="#">
+                        <div class="inputs">
+                            <div class="fields">
+                                <div class="fieldset">
+                                    <input type="email" class="before-f1" required="" autocomplete="off" >
+                                    <h1 class="F1"><span>User name</span></h1>
+                                    <label  class="placeholder">Username</label><br>
+                                </div>
                             </div>
-                        </div>
-                        <div class="fields">
-                            <div class="fieldset">
-                                <input type="email" class="before-f1" required="" autocomplete="off" >
-                                <h1 class="F1"><span>Email or phone</span></h1>
-                                <label  class="placeholder">Email or phone</label><br>
+                            <div class="fields">
+                                <div class="fieldset">
+                                    <input type="email" class="before-f1" required="" autocomplete="off" >
+                                    <h1 class="F1"><span>Email or phone</span></h1>
+                                    <label  class="placeholder">Email or phone</label><br>
+                                </div>
                             </div>
-                        </div>
-                        <div class="fields">
-                            <div class="fieldset">
-                                <input type="password" class="before-f1" name="pwd" required="" autocomplete="off">
-                                <h1 class="F1"><span>Password</span></h1>
-                                <label class="placeholder">Password</label><br>
+                            <div class="fields">
+                                <div class="fieldset">
+                                    <input type="password" class="before-f1" name="pwd" required="" autocomplete="off">
+                                    <h1 class="F1"><span>Password</span></h1>
+                                    <label class="placeholder">Password</label><br>
+                                </div>
                             </div>
-                        </div>
-                        <div class="fields">
-                            <div class="fieldset">
-                                <input type="password" class="before-f1" name="pwd" required="" autocomplete="off">
-                                <h1 class="F1"><span>Password</span></h1>
-                                <label class="placeholder">Confirm Password</label><br>
+                            <div class="fields">
+                                <div class="fieldset">
+                                    <input type="password" class="before-f1" name="pwd" required="" autocomplete="off">
+                                    <h1 class="F1"><span>Password</span></h1>
+                                    <label class="placeholder">Confirm Password</label><br>
+                                </div>
                             </div>
-                        </div>
-                        <div class="sign-in-btn">
-                            <div class="mid-text">
-                                <p>
-                                    Sign Up
+                            <div class="sign-in-btn">
+                                <div class="mid-text">
+                                    <p>
+                                        Sign Up
+                                    </p>
+                                </div>                     
+                            </div>
+                            <div class="sign-up2">
+                                <p class="mid-text">
+                                    Already Have an Account? 
+                                    <span>Sign Up</span>
                                 </p>
-                            </div>                     
-                        </div>
-                        <div class="sign-up2">
-                            <p class="mid-text">
-                                Already Have an Account? 
-                                <span>Sign Up</span>
-                            </p>
-                        </div>
-                    </div>                
-                </form>
+                            </div>
+                        </div>                
+                    </form>
+                </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
